@@ -105,6 +105,8 @@
                 <arg>-Xlint:all,-serial,-processing,-this-escape</arg>
                 <arg>-ApropertyDir=${project.parent.basedir}/src/site/asciidoc/properties</arg>
                 <arg>-proc:full</arg>
+                <arg>--add-modules</arg>
+                <arg>jdk.incubator.vector</arg>
               </compilerArgs>
               <annotationProcessorPaths>
                 <path>
